--- a/src/package.json
+++ b/src/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "mongoose": "^7.4.2"
+    "mongoose": "^7.4.2",
+    "uuid": "^9.0.0"
   }
 }
